# ndt_3d_mapmatching

./: CMakeLists.txt  README.md  package.xml
launch/: ndt_3d_mapmatching_evaluate_factors_v1.0_0.5m.launch~  ndt_3d_mapmatching_evaluate_factors_v1.0_3.0.launch~
launch/ground truth/: ndt_3d_mapmatching_groundtruth_ds_ndt_same_phase_v1_0.launch  ndt_3d_mapmatching_groundtruth_v1_0.launch
launch/map matching/: ndt_3d_mapmatching_5.0_iis.launch  ndt_3d_mapmatching_5.0_shinjuku.launch  ndt_3d_mapmatching_5.1.launch  ndt_3d_mapmatching_5.2.launch  ndt_3d_mapmatching_6.0.launch
src/: ndt_3d_mapmatching_evaluate_factors_v1.0.cpp  ndt_3d_mapmatching_evaluate_factors_v1.2.cpp  ndt_3d_mapmatching_groundtruth_ds_ndt_same_phase_v1.0.cpp  ndt_3d_mapmatching_groundtruth_v1.0.cpp  ndt_3d_mapmatching_v5.0.cpp  ndt_3d_mapmatching_v5.2.cpp  ndt_3d_mapmatching_v6.0.cpp
src/backup/: ndt_3D_mapmatching_v4.0.cpp  ndt_3D_mapmatching_vis_dis_v1.1.cpp  ndt_3D_mapmatching_vis_dis_v2.0.cpp  ndt_3D_mapmatching_vis_dis_v3.0.cpp  ndt_3D_mapmatching_vis_dis_v3.1.cpp  ndt_3D_mapmatching_vis_dis_v4.0.cpp  ndt_3D_mapmatching_vis_dis_v4.1.cpp  ndt_3D_mapmatching_vis_dis_v4.2.cpp
